<resources>
    <string name="app_name" translatable="false">GAiT Podziały</string>
    <string name="driverId" translatable="false">0000</string>
    <string name="assignment_sample_status" translatable="false">status</string>
    <string name="assignment_sample_date" translatable="false">01-01-1980</string>
    <string name="assignment_sample_code" translatable="false">00/00/A</string>
    <string name="assignment_sample_timeEnd" translatable="false">00:00</string>
    <string name="assignment_sample_timeTotal" translatable="false">00:00</string>
    <string name="assignment_sample_notices" translatable="false">+0</string>
    <string name="assignment_sample_startTime" translatable="false">00:00</string>
    <string name="assignment_sample_startLocation" translatable="false">startLocation</string>
    <string name="assignment_sample_endLocation" translatable="false">endLocation</string>
    <!--    Users panel-->
    <string name="document_sample_name" translatable="false">{DocumentTitle}</string>
    <string name="assignment_sample_weekday" translatable="false">weekday</string>

    <string name="title_activity_login">Zaloguj się</string>
    <string name="prompt_driver_number">Numer kierującego</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="welcome">Witaj! </string>
    <string name="invalid_username">Wpisz numer kierującego</string>
    <string name="invalid_password">Wpisz hasło</string>
    <string name="login_failed">Logowanie nie powiodło się</string>
    <string name="submit">ActivityAssignmentsFabDesc</string>
    <string name="firstName">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="today_assignment">Pierwszy najbliższy przydział</string>
    <string name="assignment_totalTime_label">Czas trwania:</string>
    <string name="assignment_start_label">Rozpoczęcie:</string>
    <string name="assignment_end_label">Zakończenie:</string>
    <string name="tomorrow_assignment">Drugi najbliższy przydział</string>
    <string name="status_ongoing">W trakcie</string>
    <string name="status_willstart">Rozpocznie się</string>

    <!--    Users panel-->
    <string name="change_default_user_alert_dialog_message">"Czy napewno chcesz ustawić tego użytkownika jako domyślnego?\n\nDane domyślnego użytkownika będą wyświetlane od razu po uruchomieniu aplikacji."</string>
    <string name="change_default_user_success_toast_1">Użytkownik </string>
    <string name="change_default_user_success_toast_2"> został ustawiony jako domyślny</string>
    <string name="unable_to_logout_toast">Nie można wylogować głównego użytkownika!</string>
    <string name="logout_confirmation_alert_dialog_message">Czy napewno chcesz wylogować użytkownika?</string>

    <string name="data_error">BŁĄD POBIERANIA DANYCH</string>
    <string name="data_error_dialog_title">Logowanie użytkownika nie powiodło się!</string>
    <string name="data_error_dialog_message">Aplikacja nie mogła zalogować się do strony internetowej GAiT.\nSpróbuj zalogować się bezpośrednio poprzez stronę internetową.\nJeżeli udało Ci się prawidłowo zalogować przez stronę internetową, a niniejszy komunikat dalej występuje, proszę o kontakt poprzez formularz kontaktowy na stronie ravensu.com/contact</string>
    <string name="data_error_dialog_negative_button">Otwórz w przeglądarce</string>
    <string name="no_assignment">No assignment</string>
    <string name="no_assignments">Brak przydziałów</string>
    <string name="no_documents">No documents</string>
    <string name="first_launch_welcome_dialog_title">Ostrzeżenie</string>
    <string name="first_launch_welcome_dialog_message">Witaj!\n\nNiniejsza aplikacja NIE jest oficjalną aplikacją i nie należy do spółki Gdańskie Autobusy i Tramwaje.\n\nAplikacja powstała jako projekt hobbystyczny z myślą o kierowcach i motorniczych GAiT oraz ich rodzinach i znajomych.\n\nAplikacja ma na celu ułatwienie kierowcom i motorniczym spółki sprawdzanie własnych podziałów i wyświetlanie ich w przystępniejszy sposób. Dane dotyczące podziałów są pobierane ze strony dla pracowników (podzialy.gait.pl). Pomimo iż twórca dołożył wszelkich starań by aplikacja była wolna od błędów to należy mieć na uwadze, że takowe mogą wystąpić i twórca w żaden sposób nie ponosi odpowiedzialności za szkody w wyniku potencjalnych błędów w działaniu aplikacji.\n\nW przypadku odnalezienia błędu w działaniu aplikacji, można takowy błąd zgłosić za pomocą formularza kontaktowego na stronie <a href="https://dev.ravensu.com/contact">dev.ravensu.com/contact</a>.\n\nMiłego korzystania :)\nBartosz Baum  |  <a href="https://ravensu.com">ravensu.com</a></string>
    <string name="first_launch_welcome_dialog_positive">Akceptuję</string>
    <string name="first_launch_welcome_dialog_negative">Nie akceptuję</string>

    <string name="about">Niniejsza aplikacja NIE jest oficjalną aplikacją i nie należy do spółki Gdańskie Autobusy i Tramwaje.\nAplikacja powstała jako projekt hobbystyczny z myślą o kierowcach i motorniczych GAiT oraz ich rodzinach i znajomych. Twórca w żaden sposób nie ponosi odpowiedzialności za szkody w wyniku potencjalnych błędów w działaniu aplikacji.\nAplikacja ma na celu ułatwienie kierowcom i motorniczym spółki sprawdzanie własnych podziałów i wyświetlanie ich w przystępniejszy sposób. Dane dotyczące podziałów są pobierane ze strony <a href = "http://podzialy.gait.pl">podzialy.gait.pl</a> za pomocą metody webscrapping\'u.\nW przypadku odnalezienia błędu w działaniu aplikacji, można takowy błąd zgłosić za pomocą formularza kontaktowego na stronie <a href="https://dev.ravensu.com/contact">dev.ravensu.com/contact</a>.</string>
    <string name="about_more_info">Możesz dowiedzieć się więcej o tej aplikacji i zobaczyć jej kod źródłowy na <a href = "https://github.com/Raven351/GAiTPodzialy">github.com/Raven351/GAiTPodzialy</a></string>
    <string name="about_made_by">Made with ❤ by:\nBartosz Baum\n<a href="https://dev.ravensu.com">dev.ravensu.com</a>\n\nCopyright 2020</string>
    <string name ="login_made_by">Aplikacja wykonana przez:\n\nBartosz Baum\n<a href="https://dev.ravensu.com">dev.ravensu.com</a></string>

    <string name="users_loading_error_dialog_title">Wystąpił błąd!</string>
    <string name="users_loading_error_dialog_message">Wystąpił błąd podczas próby wczytania danych użytkownika.\n\nMoże być to spowodowane brakiem lub słabym połączeniem internetowym.</string>
    <string name="status_dayoff">Dzień wolny</string>

    <string name="exit_app_dialog_title">Ostrzeżenie</string>
    <string name="exit_app_dialog_message">Czy napewno chcesz zamknąć aplikację?</string>
    <string name="dialog_yes">Tak</string>
    <string name="dialog_no">Nie</string>
    <string name="version">"Version: "</string>
    <string name="no_data">BRAK DANYCH</string>
    <string name="buttonShowToday">Przewiń do dzisiaj</string>
    <string name="logout">Wyloguj</string>
    <string name="setAsDefault">Ustaw jako domyślny</string>
    <string name="select">Wybierz</string>
</resources>
