<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/date"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/assignment_sample_date" />

    <TextView
        android:id="@+id/assignmentCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date"
        tools:text="@string/assignment_sample_code" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toEndOf="@+id/assignmentCode"
        app:layout_constraintTop_toTopOf="@+id/assignmentCode"
        tools:text="@string/assignment_sample_notices" />

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/assignment_start_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#0F8520"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/assignment_end_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#eb5050"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLabel" />

    <TextView
        android:id="@+id/timeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#0F8520"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/startLabel"
        app:layout_constraintTop_toTopOf="@+id/startLabel"
        tools:text="@string/assignment_sample_startTime" />

    <TextView
        android:id="@+id/timeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#eb5050"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/timeStart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/endLabel"
        app:layout_constraintTop_toTopOf="@+id/endLabel"
        tools:text="@string/assignment_sample_timeEnd" />

    <TextView
        android:id="@+id/locationStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#0F8520"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/timeStart"
        app:layout_constraintTop_toTopOf="@+id/timeStart"
        tools:text="@string/assignment_sample_startLocation" />

    <TextView
        android:id="@+id/locationEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/assignment_sample_endLocation"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#eb5050"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/locationStart"
        app:layout_constraintTop_toTopOf="@+id/timeEnd" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/assignment_sample_timeTotal" />

    <TextView
        android:id="@+id/timeTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="1dp"
        android:text="@string/assignment_totalTime_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#000000"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/timeLabel"
        app:layout_constraintTop_toTopOf="@+id/timeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
