<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/assignments_list_currents_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.assignmentslist.AssignmentsTodayTomorrowFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:background="#F8BFBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/driverId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/driverId"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driverFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/firstName"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driverSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/surname"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverFirstName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/assignment_today_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F3F3F3"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/todayAssignmentLabelContainer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#DFDFDF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/todayAssignmentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/today_assignment"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/todayAssignmentStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/assignment_sample_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayAssignmentLabel"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/assignmentTodayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/assignment_sample_date"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayAssignmentLabelContainer" />

        <TextView
            android:id="@+id/assignmentTodayCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_code"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/assignmentTodayDate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTodayDate" />

        <TextView
            android:id="@+id/assignmentTodayTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_timeEnd"
            android:textColor="#D33434"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/assignmentTodayEndLabel"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTodayEndLabel" />

        <TextView
            android:id="@+id/assignmentTodayTimeTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_sample_timeTotal"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/assignmentTodayCode"
            app:layout_constraintTop_toTopOf="@+id/assignmentTodayTimeTotalLabel" />

        <TextView
            android:id="@+id/assignmentTodayNotices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_notices"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/assignmentTodayCode"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTodayCode" />

        <TextView
            android:id="@+id/assignmentTodayTimeTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/assignment_totalTime_label"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/assignmentTodayTimeTotal" />

        <TextView
            android:id="@+id/assignmentTodayTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_startTime"
            android:textColor="#0E871F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/assignmentTodayStartLabel"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTodayStartLabel" />

        <TextView
            android:id="@+id/assignmentTodayStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/assignment_start_label"
            android:textColor="#0E871F"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayAssignmentLabelContainer" />

        <TextView
            android:id="@+id/assignmentTodayEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/assignment_end_label"
            android:textColor="#D33434"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTodayStartLocation" />

        <TextView
            android:id="@+id/assignmentTodayStartLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/assignment_sample_startLocation"
            android:textColor="#0E871F"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/assignmentTodayTimeStart"
            app:layout_constraintTop_toTopOf="@+id/assignmentTodayTimeStart" />

        <TextView
            android:id="@+id/assignmentTodayEndLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/assignment_sample_endLocation"
            android:textColor="#D33434"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/assignmentTodayTimeEnd"
            app:layout_constraintTop_toTopOf="@+id/assignmentTodayTimeEnd" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F3F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_today_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tomorrowAssignmentLabelContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#DFDFDF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tomorrowAssignmentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tomorrow_assignment"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/assignmentTomorrowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/assignment_sample_date"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowAssignmentLabelContainer" />

        <TextView
            android:id="@+id/assignmentTomorrowCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_code"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/assignmentTomorrowDate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTomorrowDate" />

        <TextView
            android:id="@+id/assignmentTomorrowTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_timeEnd"
            android:textColor="#D33434"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/assignmentTomorrowEndLabel"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTomorrowEndLabel" />

        <TextView
            android:id="@+id/assignmentTomorrowTimeTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_sample_timeTotal"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/assignmentTomorrowCode"
            app:layout_constraintTop_toTopOf="@+id/assignmentTomorrowTimeTotalLabel" />

        <TextView
            android:id="@+id/assignmentTomorrowNotices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_notices"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/assignmentTomorrowCode"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTomorrowCode" />

        <TextView
            android:id="@+id/assignmentTomorrowTimeTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/assignment_totalTime_label"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/assignmentTomorrowTimeTotal" />

        <TextView
            android:id="@+id/assignmentTomorrowTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assignment_sample_startTime"
            android:textColor="#0E871F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/assignmentTomorrowStartLabel"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTomorrowStartLabel" />

        <TextView
            android:id="@+id/assignmentTomorrowStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/assignment_start_label"
            android:textColor="#0E871F"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowAssignmentLabelContainer" />

        <TextView
            android:id="@+id/assignmentTomorrowEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/assignment_end_label"
            android:textColor="#D33434"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assignmentTomorrowStartLocation" />

        <TextView
            android:id="@+id/assignmentTomorrowStartLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/assignment_sample_startLocation"
            android:textColor="#0E871F"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/assignmentTomorrowTimeStart"
            app:layout_constraintTop_toTopOf="@+id/assignmentTomorrowTimeStart" />

        <TextView
            android:id="@+id/assignmentTomorrowEndLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/assignment_sample_endLocation"
            android:textColor="#D33434"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/assignmentTomorrowTimeEnd"
            app:layout_constraintTop_toTopOf="@+id/assignmentTomorrowTimeEnd" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>